# servo4257-rs

./: .gitignore  AGENTS.md  Cargo.toml  NANO-STEPPER-PORT.md  README.md  SESSION-FINDINGS-commutation.md  build.rs  memory.x  n32l40x.target.yaml  rust-toolchain.toml
.cargo/: config.toml
docs/: ARCHITECTURE.md  DECISIONS.md  HAL_INTERFACE.md  HARDWARE.md  commutation-bringup-log.md  commutation-profile.md  nano-stepper-port.md  over-can-dev-loop.md
memory/: app.x  boot.x  full.x
src/: app_meta.rs  board.rs  display.rs  lib.rs
src/boards/: hw_map.rs  mod.rs  servo42d.rs  servo57d.rs
src/boundary/: feedback.rs  ipbuf.rs  mod.rs  setpoint.rs
src/canopen/: cia402.rs  download.rs  mgmt.rs  mod.rs  od.rs  pdo.rs  transport.rs
src/hot/: cascade.rs  current.rs  interp.rs  mod.rs  nvic.rs
src/motion/: commutation.rs  encoder.rs  foc.rs  mod.rs  trig.rs
src/rt/: can.rs  i2c.rs  mod.rs  time_driver.rs
src/shared/: mod.rs  params.rs  setpoints.rs  telemetry.rs
tools/xtask/: Cargo.toml
tools/xtask/.cargo/: config.toml
tools/xtask/src/: main.rs
